...
                    .tabItem { Label("Library", systemImage: "music.note.list") }
                    .tag(Tab.library)

                    tabRoot {
                        NotesView()
                    }
                    .tabItem { Label("Notes", systemImage: "note.text") }
                    .tag(Tab.notes)

                    tabRoot {
                        SearchView()
                    }
                    .tabItem { Label("Search", systemImage: "magnifyingglass") }
...
